<resources>
    <string name="app_name">FRtrondheim</string>
    <string name="title_activity_program">PROGRAM</string>
    <string name="title_activity_program_item">ProgramItemActivity</string>
    <string name="title_activity_sponsor">SPONSORER</string>
    <string name="title_activity_spotify">SPOTIFY LISTER</string>
    <string name="title_activity_more_info">MER INFORMASJON</string>
    <string name="title_activity_maps">KART</string>
    <string name="title_activity_groups">FADDERGRUPPER</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="default_notification_channel_id">Generelle Notifikasjoner</string>
    <string name="program_item_button_action_default">Se tilbud</string>
    <string name="sponsor_button_more_offers">Flere tilbud</string>
    <string name="dialog_not_available">Ikke tilgjengelig</string>
    <string name="dialog_availability_spotify">Denne spillelisten blir tilgjengelig 20. August</string>
    <string name="dialog_availability_shopping">Disse blir tilgjengelig 20. August</string>
    <string name="dialog_google_services_title">Google Services ikke tilgjenelig eller utdatert</string>
    <string name="dialog_google_services_message">Fant ikke gyldig Google Play Services på din enhet.
        Bruk av kart vil kan være utilgjengelig.</string>
    <string name="dialog_google_services_download">Last ned</string>
    <string name="link_google_services">https://play.google.com/store/apps/details?id=com.google.android.gms&amp;hl=nb</string>
    <string name="link_bi_more_offers">http://www.bis.no/trondheim/markedsavtaler/</string>
    <string name="home_button_sponsor">Sponsorer</string>
    <string name="home_button_spotify">Spotify lister</string>
    <string name="home_button_groups">Faddergrupper</string>
    <string name="home_button_program">Program</string>
    <string name="home_button_info">Mer informasjon</string>
    <string name="button_groups_economy">Økonomi og administrasjon</string>
    <string name="button_groups_marketing">Markedsføringsledelse</string>
    <string name="button_groups_realestate">Eiendomsmegling</string>
    <string name="button_groups_others">Blandingsgrupper</string>
    <string name="info_button_faq">FAQ</string>
    <string name="info_button_maps">Kart</string>
    <string name="info_button_facebook">Facebook</string>
    <string name="info_button_instagram">Instagram</string>
    <string name="info_button_bi">at.bi</string>
    <string name="info_button_about">Om appen</string>
    <string name="dialog_text_about">Appen er utviklet av Lars Kåre Syversen, i samarbeid med
        E&amp;A Design AS.</string>
    <string name="link_google_doc_economy">https://docs.google.com/spreadsheets/d/1pj5EL51zT5DKiYyMZ0Y2d6cm9wOQNH6U-_z62Zc3k6w/edit#gid=0</string>
    <string name="link_google_doc_marketing">https://docs.google.com/spreadsheets/d/1-C-rTRuYbkr7EWtDdCf8wEulGOLccBk3E9LToKVuw1M/edit#gid=0</string>
    <string name="link_google_doc_realestate">https://docs.google.com/spreadsheets/d/1buEg8zmPmi3xwFQSX2K4oLbGWivzWfXW_TRh_inmqGU/edit#gid=0</string>
    <string name="link_google_doc_others">https://docs.google.com/spreadsheets/d/1QJB_kMVGdxTz5kV77d3hwq7mPn1Bp0zV5dVK3xZV5Nw/edit#gid=0</string>
    <string name="link_google_doc_shopping">https://docs.google.com/document/d/16PWIL86mLue75pCpL8qbC36rE3iSai6c0nX2z1KtFkU/edit</string>
    <string name="program_list_overhead_conctacts">Kontakt eventmanager for spørsmål
        angående arrangementene:</string>
    <string name="program_list_overhead_facebook">Facebook:</string>
    <string name="program_list_overhead_name1">Camilla Andreassen</string>
    <string name="program_list_overhead_name2">Elisabeth Aagaard</string>
    <string name="program_list_overhead_number1">954 59 153</string>
    <string name="program_list_overhead_number2">908 82 788</string>
    <string name="groups_overhead_conctacts">Kontakt fadderkoordinator for spørsmål
        angående faddergrupper:</string>
    <string name="groups_overhead_facebook">Facebook:</string>
    <string name="groups_overhead_name1">Maren Olsø</string>
    <string name="groups_overhead_name2">Bjørn Ø.L. Wigdal</string>
    <string name="groups_overhead_number1">902 16 000</string>
    <string name="groups_overhead_number2">974 65 632</string>
    <string name="link_button_instagram">https://www.instagram.com/fadderullan_trondheim/</string>
    <string name="link_button_facebook">https://www.facebook.com/bistrondheim/</string>
    <string name="link_button_bi">https://at.bi.no</string>
    <string name="link_google">https://www.google.com</string>
    <string name="webview_title_groups">Faddergrupper</string>
    <string name="webview_title_offers">Se tilbud</string>
    <string name="webview_title_more_offers">Flere tilbud</string>
    <string-array name="array_map_markers">
        <item>Dødens Dal</item>
        <item>Studentersamfundet</item>
        <item>Legevakt</item>
        <item>BI Campus Trondheim</item>
        <item>Trondheim Torg</item>
        <item>The Mint</item>
        <item>Nattergalen</item>
        <item>Wildside</item>
        <item>Egon Solsiden</item>
        <item>Burger King</item>
        <item>Nova Kinosenter</item>
        <item>Solsiden</item>
        <item>Møllenberg</item>
        <item>Akademika BI Trondheim</item>
        <item>O\'Learys</item>
        <item>Frimurerlogoen</item>
        <item>Royal Garden Radisson Blu</item>
        <item>Lille London</item>
        <item>Egon Tårnet</item>
        <item>3T Pirbadet</item>
        <item>Cubus Solsiden</item>
    </string-array>
    <string-array name="programListItems">
        <item>Mexican fiesta</item>
        <item>Trønderfest</item>
        <item>Bar til bar</item>
        <item>Vors til vors</item>
        <item>BIS-Lekene</item>
        <item>Temakveld</item>
        <item>Togafest</item>
        <item>Shop til you drop + Karrierekveld</item>
        <item>Linje Vors</item>
        <item>Silent Disco</item>
        <item>The Big Bang</item>
    </string-array>
    <string-array name="programListDates">
        <item>Onsdag 15. August</item>
        <item>Torsdag 16. August</item>
        <item>Fredag 17. August</item>
        <item>Lørdag 18. August</item>
        <item>Søndag 19. August</item>
        <item>Mandag 20. August</item>
        <item>Tirsdag 21. August</item>
        <item>Onsdag 22. August</item>
        <item>Torsdag 23. August</item>
        <item>Fredag 24. August</item>
        <item>Lørdag 25. August</item>
    </string-array>
    <string-array name="sponsorListTitles">
        <item>Mercursenteret</item>
        <item>Byhaven</item>
        <item>Eplehuset</item>
        <item>Studio 26</item>
        <item>Egon Solsiden</item>
        <item>Heimdal Trafikkskole</item>
        <item>ME nightclub</item>
    </string-array>
    <string-array name="sponsorDeals">
        <item>Mercursenteret er et kjøpesenter i Trondheim med 20 butikker og ligger i Midtbyen
            i krysset mellom Kongens gate og Nordre gate. \n\n20. August slippes det en hel
            rekke med tilbud fra senteret som BI elever får benytte seg av tirsdag den 22. August.
            </item>
        <item>Byhaven er et kjøpesenter i sentrum av Trondheim i Olav Tryggvasons gate 28.\n\n
            Senteret har til sammen 42 butikker og spisesteder.\n\n 20. August slippes det en hel
            rekke med tilbud fra senteret som BI elever får benytte seg av tirsdag
            den 22. August.</item>
        <item>Alltid studentrabatt på Mac og Ipad. \n\n Vi har alt du trenger for de store
            og små øyeblikkene i løpet av studentlivet.</item>
        <item>Gratis inngang, garderobe og bordreservering på fredager før kl. 00:00. \n\n
            Gratis inngang, garderobe og bordservering på lørdager før kl. 23:30. \n\n
            Bordreservering gjøres direkte på www.studio26.no \n\n
            Å vise studentbevis gjennom appen fungerer ikke,
            du må fremvise fysisk BI kort i plast, med bilde og navn. \n\n
            Når BIS har arrangementer på Studio26 vil det være gode priser på blant annet øl!
            </item>
        <item>Egon har et bredt utvalg fingermat.\n\n Husk at du som BI Student
            får 15% rabatt på all mat ved Egon Solsiden.</item>
        <item>Våre avdelinger finner dere på Heimdal, Midtbyen, Byåsen, Melhus, Tyholt og
            Tiller.\n\n På Heimdal finner du også vår storbilavdeling. Dette gjør oss til en av
            dine nærmeste kjøreskoler i Trondheim. </item>
        <item>Me nightclub er en nattklubb som inkluderer alle uansett legning.\n\n
            En av de mest kjente dansegulvene i byen @menightclub
            </item>
    </string-array>
    <string-array name="spotifyListTitles">
        <item>Fadderkickoff</item>
        <item>Mexican Fiesta</item>
        <item>Trønderfest</item>
        <item>Vors til vors</item>
        <item>Toga</item>
        <item>Linjevors</item>
        <item>The Big Bang</item>
    </string-array>
    <string-array name="spotifyListLinks">
        <item>https://open.spotify.com/user/kine.leonardsen/playlist/4DGpyuPQsGEx7cWZU33zD1</item>
        <item>https://open.spotify.com/user/kine.leonardsen/playlist/05DJLnlhCqZWIKbtNjkWZ5</item>
        <item>https://open.spotify.com/user/kine.leonardsen/playlist/07BRTtFShgImmvwa2JWfEn</item>
        <item>https://open.spotify.com/user/kine.leonardsen/playlist/6ji1fJ4XLO2xxl1dd81ymS</item>
        <item>https://open.spotify.com/user/kine.leonardsen/playlist/6mzQu6rAnzUFinLUEjFSZD</item>
        <item>https://open.spotify.com/user/kine.leonardsen/playlist/3f7Bl8JJjWgrtfJh0ssjRB</item>
        <item>https://open.spotify.com/user/kine.leonardsen/playlist/0y1R4y58T1NnR6aow12OWR</item>
    </string-array>
    <string-array name="spotifyListUri">
        <item>spotify:user:kine.leonardsen:playlist:4DGpyuPQsGEx7cWZU33zD1</item>
        <item>spotify:user:kine.leonardsen:playlist:05DJLnlhCqZWIKbtNjkWZ5</item>
        <item>spotify:user:kine.leonardsen:playlist:07BRTtFShgImmvwa2JWfEn</item>
        <item>spotify:user:kine.leonardsen:playlist:6ji1fJ4XLO2xxl1dd81ymS</item>
        <item>spotify:user:kine.leonardsen:playlist:6mzQu6rAnzUFinLUEjFSZD</item>
        <item>spotify:user:kine.leonardsen:playlist:3f7Bl8JJjWgrtfJh0ssjRB</item>
        <item>spotify:user:kine.leonardsen:playlist:0y1R4y58T1NnR6aow12OWR</item>
    </string-array>
    <string name="dialogOk">Skjul</string>
    <string name="dialogMoreInfo">Mer Info</string>
    <string name="dialogIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
        non malesuada erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
        cubilia Curae; Praesent ligula arcu, convallis non orci viverra, blandit porttitor sem.
        Morbi non eleifend neque. Integer cursus nulla eget urna vehicula auctor.</string>
</resources>