<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moiv"
    tools:context=".GroupsActivity">


    <TextView
        android:id="@+id/txtGroupsTitle"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/title_activity_groups"
        android:textColor="@color/darkGray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_original" />

    <LinearLayout
        android:id="@+id/linLayGroups"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#10000000"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroupsTitle">

        <include
            android:id="@+id/top_header"
            layout="@layout/listview_header"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/btnGroupsEconomy"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleEconomyButtonClicked"
            android:text="@string/button_groups_economy"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGroupsMarketing"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleMarketingButtonClicked"
            android:text="@string/button_groups_marketing"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGroupsRealestate"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleRealestateButtonClicked"
            android:text="@string/button_groups_realestate"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGroupsOthers"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="handleOthersButtonClicked"
            android:text="@string/button_groups_others"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>