<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moiv"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnMainGoups"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_group"
        android:onClick="handleButtonGroupsClicked"
        android:text="@string/home_button_groups"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainProgram" />

    <Button
        android:id="@+id/btnMainProgram"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_program"
        android:onClick="handleButtonProgramClicked"
        android:text="@string/home_button_program"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnMainSpotify"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_spotify"
        android:onClick="handleButtonSpotifyClicked"
        android:text="@string/home_button_spotify"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainSponsors" />


    <Button
        android:id="@+id/btnMainInfo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_info_outline_black_24dp"
        android:onClick="handleButtonInfoClicked"
        android:text="@string/home_button_info"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainSpotify" />

    <Button
        android:id="@+id/btnMainSponsors"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_sponsors"
        android:onClick="handleButtonSponsorsClicked"
        android:text="@string/home_button_sponsor"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMainGoups" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fadder" />

</android.support.constraint.ConstraintLayout>