<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moiv"
    tools:context=".MoreInfoActivity">


    <TextView
        android:id="@+id/txtInfoTitle"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/title_activity_more_info"
        android:textColor="@color/darkGray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_original" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:background="#10000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoTitle">

        <LinearLayout
            android:id="@+id/btnInfoMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_map" />

            <TextView
                android:id="@+id/txtInfoMaps"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="start"
                android:text="@string/info_button_maps"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnInfoFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_facebook" />

            <TextView
                android:id="@+id/txtInfoFacebook"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="start"
                android:text="@string/info_button_facebook"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnInfoInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_instagram" />

            <TextView
                android:id="@+id/txtInfoInstagram"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="start"
                android:text="@string/info_button_instagram"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnInfoAtBI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_bi" />

            <TextView
                android:id="@+id/txtInfoAtBI"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="start"
                android:text="@string/info_button_bi"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnInfoAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_about" />

            <TextView
                android:id="@+id/txtInfoAbout"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="start"
                android:text="@string/info_button_about"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>